# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jdavid@itaapy.com--public/itools--main--0.8
#

2005-04-08 13:45:49 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-64

    Summary:
      merge from the 0.7 branch
    Revision:
      itools--main--0.8--patch-64

    Patches applied:
    
     * jdavid@itaapy.com--public/itools--main--0.7--patch-62
       catalog, fix so indexes are the same for big and little endian
    

    modified files:
     Changelog catalog/IO.py

    new patches:
     jdavid@itaapy.com--public/itools--main--0.7--patch-62


2005-04-08 13:04:35 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-63

    Summary:
      html, fix comments
    Revision:
      itools--main--0.8--patch-63


    modified files:
     Changelog html/HTML.py


2005-04-08 12:35:12 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-62

    Summary:
      xml, load attributes as byte strings (default namespace)
    Revision:
      itools--main--0.8--patch-62

    Now the type for attributes that are not attached to a namespace
    is a byte string, instead of unicode.

    modified files:
     Changelog xml/namespaces.py


2005-04-07 19:32:42 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-61

    Summary:
      xml, escape the '<' sign on serialization
    Revision:
      itools--main--0.8--patch-61

    Otherwise the output is not well-formed XML.

    modified files:
     Changelog xml/XML.py


2005-04-07 19:25:22 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-60

    Summary:
      xml, rename 'Children.encode' to 'to_unicode'
    Revision:
      itools--main--0.8--patch-60


    modified files:
     Changelog html/HTML.py xhtml/XHTML.py xml/XML.py


2005-04-07 18:55:26 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-59

    Summary:
      xhtml, fix translate
    Revision:
      itools--main--0.8--patch-59


    modified files:
     Changelog xhtml/XHTML.py


2005-04-07 18:54:59 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-58

    Summary: